AWS/puplic-subnets.tf
resource "aws_subnet" "public-subnet1" {
  vpc_id                  = aws_vpc.my-vpc.id
  cidr_block              = var.public-subnet1-cidr
  availability_zone       = var.first-az
  map_public_ip_on_launch = true

  tags = {
    Name = "public-subnet1"
  }
}

resource "aws_subnet" "public-subnet2" {
  vpc_id                  = aws_vpc.my-vpc.id
  cidr_block              = var.public-subnet2-cidr
  availability_zone       = var.second-az
  map_public_ip_on_launch = true

   tags = {
    Name = "public-subnet2"
  }
}
